# axum-tutorial

./: Cargo.toml  README.md
sql/: create-tables.sql
src/: database.rs  entity.rs  handler.rs  main.rs  service.rs
